add_subdirectory(example_1) # bar extension
add_subdirectory(example_2) # continuation solver
add_subdirectory(example_3) # thermoelastic plate bending
add_subdirectory(example_4) # tie-constraints
add_subdirectory(example_w) # stiffened plate optimization thermally stressed (blade stiffeners)
add_subdirectory(example_w_beam) # beam optimization thermally stressed (blade stiffeners)
add_subdirectory(example_w_agg) # stiffened plate optimization thermally stressed with aggregation (blade stiffeners)
add_subdirectory(example_w_agg2) # aggregation of freq constraints  (blade stiffeners)
add_subdirectory(example_w_hat) # stiffened plate optimization thermally stressed (hat stiffeners)
add_subdirectory(example_w_hat_agg) # stiffened plate optimization thermally stressed (hat stiffeners) with aggregation
add_subdirectory(example_w_foam) # stiffened plate optimization thermally stressed (hat stiffeners)
add_subdirectory(example_w_foam_analysis) # stiffened plate optimization thermally stressed (hat stiffeners)
add_subdirectory(example_5) # topology optimization
add_subdirectory(example_6) # SIMP topology optimization
add_subdirectory(example_7) # NastranIO input for Nastran BDF mesh
add_subdirectory(example_8) # Homogenized level-set topology optimization
